--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,11 @@
     justify-content: center;
     transition: opacity 0.4s ease;
   }
+  .modal-open button {
+    position: fixed;
+    top: 6rem;
+    left: 1.5rem;
+  }
 
   .container {
     display: flex;
@@ -22,7 +27,8 @@
 
     img {
       border-radius: 1rem;
-      width: 100%;
+      height: 70%;
+      cursor: pointer;
     }
     div {
       box-sizing: border-box;
@@ -34,7 +40,7 @@
       text-align: center;
       font-size: 1rem;
       margin-top: 1rem;
-      width: 100%;
+      width: 50%;
     }
   }
 }
@@ -129,6 +135,7 @@ body {
     }
 
     img {
+      cursor: pointer;
       width: 100%;
       height: 100%;
       object-fit: cover;
