--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: opacity 0.4s ease;
   }
   .modal-open button {
     position: fixed;
@@ -87,13 +86,11 @@ body {
     }
   }
 
-  .search-page {
+  .page {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    font-family: Arial, sans-serif;
-    animation: fadeIn 2s ease;
 
     form {
       display: flex;
@@ -117,7 +114,6 @@ body {
         border-radius: 0.3rem;
         box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
         resize: none;
-        animation: fadeIn 1s ease;
       }
     }
   }
@@ -126,7 +122,6 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     grid-gap: 1rem;
-    animation: fadeIn 2s ease;
 
     h1 {
       grid-column: 1 / -1;
@@ -141,7 +136,6 @@ body {
       object-fit: cover;
       border-radius: 0.3rem;
       box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
     }
   }
 }
